--- a/assets/sass/_media.sass
+++ b/assets/sass/_media.sass
@@ -744,8 +744,11 @@
       &_container
          display: block
          position: relative
-         margin: 60px auto 0px auto
-         max-width: 95%
+         margin-top: 60px
+         margin-left: auto
+         margin-right: auto
+         width: 285px
+         height: 140px
          .img1
             position: absolute
             width: 130px
@@ -760,10 +763,10 @@
             top: 84px
             width: 131px
             height: 44px
-         .img4 
+         .img4
             position: absolute
             top: 70px
-            right: 40px
+            left: 188px
             width: 48px
             height: 67px
 
